k8s/platform/laravel/laravel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel
  namespace: server-hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laravel
  template:
    metadata:
      labels:
        app: laravel
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 33
        runAsGroup: 33
        fsGroup: 33
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: laravel
          image: ghcr.io/guilherme-o-brito/server-hub:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: laravel-data
              mountPath: /app/storage
            - name: bootstrap-cache
              mountPath: /app/bootstrap/cache
            - name: tmp
              mountPath: /tmp
            - name: caddy-data
              mountPath: /data
            - name: caddy-config
              mountPath: /config
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          livenessProbe:
            httpGet:
              path: /up
              port: 8080
            initialDelaySeconds: 30

          readinessProbe:
            httpGet:
              path: /up
              port: 8080
            initialDelaySeconds: 5

      volumes:
        - name: laravel-data
          persistentVolumeClaim:
            claimName: laravel-data-claim
        - name: bootstrap-cache
          emptyDir: {}
        - name: tmp
          emptyDir: {}
        - name: caddy-data
          emptyDir: {}
        - name: caddy-config
          emptyDir: {}
