k8s/platform/laravel/laravel_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel-ingress
  namespace: server-hub
spec:
  ingressClassName: traefik
  rules:
    - host: <your.domain.com>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: laravel-service
                port:
                  number: 80
